--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="col-md">
               <select class="form-control" name="" id="" onchange="handleOnGenderSelect(this)">
                 <option value="">Show all</option>
-                <option value="">Male</option>
-                <option value="">Female</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
               </select>
             </div>
           </div>
